--- a/SymPy_intro.ipynb
+++ b/SymPy_intro.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SymPy-intro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSphbPRys8NnLxaAUWjB6H",
+      "authorship_tag": "ABX9TyMYOd6LzQkiqLvPoaIP7DZM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WiMcujWI5iLd"
+      },
+      "source": [
+        "[SymPy Documentation](https://docs.sympy.org/latest/tutorial/preliminaries.html)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "OgjAYrnb0z0q"
@@ -35,7 +44,7 @@
       "source": [
         "import sympy as sym"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -46,7 +55,7 @@
       "source": [
         "x=sym.symbols('x')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +71,7 @@
       "source": [
         "sym.diff(x**2+1)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,7 +101,7 @@
       "source": [
         "sym.integrate(sym.sin (x))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,6 +116,15 @@
           },
           "execution_count": 12
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P8thArt95wJ-"
+      },
+      "source": [
+        "OR"
       ]
     },
     {
@@ -129,7 +147,7 @@
       "source": [
         "from sympy import *\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +163,7 @@
       "source": [
         "integrate(sin (x))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -175,7 +193,7 @@
       "source": [
         "integrate((1+2*x**2)*cos (tan (x)))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +223,7 @@
       "source": [
         "integrate((1+2*x**2)*cos (x))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
