--added one decorator example

--- a/advance-Concepts-of-Python.ipynb
+++ b/advance-Concepts-of-Python.ipynb
@@ -2804,6 +2804,90 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b50d576",
+   "metadata": {},
+   "source": [
+    "**Example**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d330aa54",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-28T17:02:51.072832Z",
+     "start_time": "2023-05-28T17:02:37.754342Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total time taken in :  f 1.3759737014770508\n",
+      "0.0\n",
+      "Total time taken in :  f 1.3497321605682373\n",
+      "1.0\n",
+      "Total time taken in :  f 1.3365750312805176\n",
+      "2.0\n",
+      "Total time taken in :  f 1.3150115013122559\n",
+      "3.0\n",
+      "Total time taken in :  f 1.3164501190185547\n",
+      "4.0\n",
+      "Total time taken in :  f 1.2961475849151611\n",
+      "5.0\n",
+      "Total time taken in :  f 1.3686964511871338\n",
+      "6.0\n",
+      "Total time taken in :  f 1.312432050704956\n",
+      "7.0\n",
+      "Total time taken in :  f 1.3077118396759033\n",
+      "8.0\n",
+      "Total time taken in :  f 1.3228938579559326\n",
+      "9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_time(func):\n",
+    "\n",
+    "    def inner1(*args, **kwargs):\n",
+    "        begin = time.time()\n",
+    "        \n",
+    "        returned_value=func(*args, **kwargs)\n",
+    "        end = time.time()\n",
+    "        print(\"Total time taken in : \", func.__name__, end - begin)\n",
+    "        return returned_value\n",
+    "    return inner1\n",
+    "\n",
+    "import time\n",
+    "from math import sqrt # inbuilt fucntion\n",
+    "\n",
+    "@calculate_time\n",
+    "def f(i): \n",
+    "    \n",
+    "    # some computations  that take time\n",
+    "    x=10000\n",
+    "    p =1;\n",
+    "    for j in range(x):\n",
+    "        for k in range(j):\n",
+    "            p *= k\n",
+    "    \n",
+    "    return sqrt(i ** 2);\n",
+    "\n",
+    "# Find sqrt of first n numbers\n",
+    "n=10;\n",
+    "\n",
+    "# start_time = time.time()\n",
+    "for i in range(n):\n",
+    "    print(f(i))\n",
+    "\n",
+    "# end_time = time.time()\n",
+    "# print (end_time-start_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15acde0b",
    "metadata": {},
    "source": [
@@ -4918,7 +5002,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "374.391px"
+    "width": "305.788px"
    },
    "toc_section_display": true,
    "toc_window_display": true
