-- added logging decorator

--- a/advance-Concepts-of-Python.ipynb
+++ b/advance-Concepts-of-Python.ipynb
@@ -2804,7 +2804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b50d576",
+   "id": "d898ee48",
    "metadata": {},
    "source": [
     "**Example**"
@@ -2813,7 +2813,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d330aa54",
+   "id": "18594f15",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-28T17:02:51.072832Z",
@@ -2992,6 +2992,218 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e4a0859a-a2f6-4653-927d-1a635e60af9b",
+   "metadata": {},
+   "source": [
+    "**Logger decorator**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4b4d8149-b79c-4d7d-9ab1-dbe23a7cef7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "...\n",
+    "from numpy import asarray\n",
+    "import logging\n",
+    "from numpy.random import seed\n",
+    "...\n",
+    " \n",
+    "# Added: Create logger and assign handler\n",
+    "logger = logging.getLogger(\"nadam\")\n",
+    "handler  = logging.StreamHandler()\n",
+    "handler.setFormatter(logging.Formatter(\"%(asctime)s|%(levelname)s|%(name)s|%(message)s\"))\n",
+    "logger.addHandler(handler)\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "# seed the pseudo random number generator\n",
+    "seed(1)\n",
+    "... # rest of the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6a5c31ad-66f0-4e82-90e3-76dcff44bbd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A Python decorator to log the function call and return value\n",
+    "def loggingdecorator(name):\n",
+    "    logger = logging.getLogger(name)\n",
+    "    def _decor(fn):\n",
+    "        function_name = fn.__name__\n",
+    "        def _fn(*args, **kwargs):\n",
+    "            ret = fn(*args, **kwargs)\n",
+    "            argstr = [str(x) for x in args]\n",
+    "            argstr += [key+\"=\"+str(val) for key,val in kwargs.items()]\n",
+    "            logger.debug(\"%s(%s) -> %s\", function_name, \", \".join(argstr), ret)\n",
+    "            return ret\n",
+    "        return _fn\n",
+    "    return _decor\n",
+    " \n",
+    "# objective function\n",
+    "@loggingdecorator(\"nadam.function\")\n",
+    "def objective(x, y):\n",
+    "    return x**2.0 + y**2.0\n",
+    "\n",
+    "# derivative of objective function\n",
+    "@loggingdecorator(\"nadam.function\")\n",
+    "def derivative(x, y):\n",
+    "    return asarray([x * 2.0, y * 2.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cf68431e-b70a-4b16-b9cf-2fdf4c169727",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-29 23:56:05,509|DEBUG|nadam.function|objective(5, 6) -> 61.0\n",
+      "2023-07-29 23:56:05,509|DEBUG|nadam.function|objective(5, 6) -> 61.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "61.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objective(5,6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33cdf1c9-ba78-4376-8205-f3b5d57ea521",
+   "metadata": {},
+   "source": [
+    "**method-2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9289ca84-fa6d-43e2-a9c5-8af4202d74e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "stream_handler = logging.StreamHandler()\n",
+    "stream_handler.setLevel(logging.INFO)\n",
+    "\n",
+    "logging.basicConfig(level=logging.DEBUG,\n",
+    "                    format=\"%(asctime)s - %(name)s - %(levelname)s - %(message)s\",\n",
+    "                    handlers=[logging.FileHandler(\"my_log.log\", mode='w'),\n",
+    "                              stream_handler])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d14b1795-6c78-4700-85a5-6c7bbe97e408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A Python decorator to log the function call and return value\n",
+    "\n",
+    "def loggingdecorator(fn):\n",
+    "    function_name = fn.__name__\n",
+    "    def _fn(*args, **kwargs):\n",
+    "        ret = fn(*args, **kwargs)\n",
+    "        argstr = [str(x) for x in args]\n",
+    "        argstr += [key+\"=\"+str(val) for key,val in kwargs.items()]\n",
+    "        print(argstr)\n",
+    "        logging.info(\"%s(%s) -> %s\", function_name, \", \".join(argstr), ret)\n",
+    "        return ret\n",
+    "    return _fn\n",
+    "\n",
+    "# objective function\n",
+    "@loggingdecorator\n",
+    "def objective(x, y):\n",
+    "    return x**2.0 + y**2.0\n",
+    "\n",
+    "# derivative of objective function\n",
+    "@loggingdecorator\n",
+    "def derivative(x, y):\n",
+    "    return ([x * 2.0, y * 2.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9012044a-beb1-469f-ac63-44bfac3f7103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 00:21:12,431 - root - INFO - derivative(5, 6) -> [10.0, 12.0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5', '6']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[10.0, 12.0]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derivative(5, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe44b5c1-dce8-4d1a-bf80-7a6cc8354fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76a0aa32-3349-4513-a62b-d9d22906be4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "0649b36a",
    "metadata": {},
    "source": [
@@ -3005,7 +3217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 25,
    "id": "2bed458a",
    "metadata": {
     "ExecuteTime": {
@@ -3020,7 +3232,7 @@
        "'__main__'"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
