--- a/advance-Python-2.ipynb
+++ b/advance-Python-2.ipynb
@@ -564,28 +564,270 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bb19dab",
+   "cell_type": "markdown",
+   "id": "3ef9afde-22c7-439e-b3e3-2270e804a19a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Lologging decorator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1adccc2-0d0f-4bf3-80c0-6fc83aaf4ffd",
+   "metadata": {},
+   "source": [
+    "Exapmle-1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b461ff99",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import logging\n",
+    "\n",
+    "stream_handler = logging.StreamHandler()\n",
+    "stream_handler.setLevel(logging.INFO)\n",
+    "\n",
+    "logging.basicConfig(level=logging.DEBUG,\n",
+    "                    format=\"%(asctime)s - %(name)s - %(levelname)s - %(message)s\",\n",
+    "                    handlers=[logging.FileHandler(\"my_lo.log\", mode='w'),\n",
+    "                              stream_handler])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e1bb5b0d",
+   "execution_count": 2,
+   "id": "32ab69ad-6565-4ca0-b7b7-efc0a186eeb9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# A Python decorator to log the function call and return value\n",
+    "\n",
+    "def loggingdecorator(fn):\n",
+    "    function_name = fn.__name__\n",
+    "    def _fn(*args, **kwargs):\n",
+    "        ret = fn(*args, **kwargs)\n",
+    "        argstr = [str(x) for x in args]\n",
+    "        argstr += [key+\"=\"+str(val) for key,val in kwargs.items()]\n",
+    "        print(argstr)\n",
+    "        logging.info(\"%s(%s) -> %s\", function_name, \", \".join(argstr), ret)\n",
+    "        return ret\n",
+    "    return _fn\n",
+    "\n",
+    "# objective function\n",
+    "@loggingdecorator\n",
+    "def objective(x, y):\n",
+    "    return x**2.0 + y**2.0\n",
+    "\n",
+    "# derivative of objective function\n",
+    "@loggingdecorator\n",
+    "def derivative(x, y):\n",
+    "    return ([x * 2.0, y * 2.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4f16238d-9286-4a79-878a-e138167621e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 00:23:47,628 - root - INFO - derivative(5, 6) -> [10.0, 12.0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5', '6']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[10.0, 12.0]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derivative(5, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b93c1bd7-2ec6-400a-ab19-a0da43ad853f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 00:23:48,205 - root - INFO - objective(5, 6) -> 61.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5', '6']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "61.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objective(5, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6685b41-1dfc-478c-8401-76623ef2b335",
+   "metadata": {},
+   "source": [
+    "Example-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7aee1da3-e825-415e-880e-8c6bcf636689",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "...\n",
+    "from numpy import asarray\n",
+    "import logging\n",
+    "from numpy.random import seed\n",
+    "...\n",
+    " \n",
+    "# Added: Create logger and assign handler\n",
+    "logger = logging.getLogger(\"nadam\")\n",
+    "handler  = logging.StreamHandler()\n",
+    "handler.setFormatter(logging.Formatter(\"%(asctime)s|%(levelname)s|%(name)s|%(message)s\"))\n",
+    "logger.addHandler(handler)\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "# seed the pseudo random number generator\n",
+    "seed(1)\n",
+    "... # rest of the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "373f5284-1ecf-46db-9b2d-2dc1c5c6771a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A Python decorator to log the function call and return value\n",
+    "def loggingdecorator(name):\n",
+    "    logger = logging.getLogger(name)\n",
+    "    def _decor(fn):\n",
+    "        function_name = fn.__name__\n",
+    "        def _fn(*args, **kwargs):\n",
+    "            ret = fn(*args, **kwargs)\n",
+    "            argstr = [str(x) for x in args]\n",
+    "            argstr += [key+\"=\"+str(val) for key,val in kwargs.items()]\n",
+    "            logger.debug(\"%s(%s) -> %s\", function_name, \", \".join(argstr), ret)\n",
+    "            return ret\n",
+    "        return _fn\n",
+    "    return _decor\n",
+    " \n",
+    "# objective function\n",
+    "@loggingdecorator(\"nadam.function\")\n",
+    "def objective(x, y):\n",
+    "    return x**2.0 + y**2.0\n",
+    "\n",
+    "# derivative of objective function\n",
+    "@loggingdecorator(\"nadam.function\")\n",
+    "def derivative(x, y):\n",
+    "    return asarray([x * 2.0, y * 2.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bb4849c9-7956-410a-afd3-f5653d0de175",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 00:26:00,016|DEBUG|nadam.function|derivative(5, 6) -> [10. 12.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([10., 12.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derivative(5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "85aefc33-3499-4ccf-8c6a-852ac8b001e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 00:26:00,938|DEBUG|nadam.function|objective(5, 6) -> 61.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "61.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objective(5,6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1581,6 +1823,7 @@
     "def mat_mult1(A, B):\n",
     "    assert A.shape[1] == B.shape[0]\n",
     "    res = np.zeros((A.shape[0], B.shape[1]), )\n",
+    "    \n",
     "    for i in range(A.shape[0]):\n",
     "        for k in range(A.shape[1]):\n",
     "            for j in range(B.shape[1]):\n",
